ass2/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> NAME EQUALS expression
Rule 2     statement -> NAME EQUALS sexpr
Rule 3     statement -> expression
Rule 4     statement -> sexpr
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression EXP expression
Rule 10    expression -> sexpr PLUS sexpr
Rule 11    expression -> sexpr MINUS sexpr
Rule 12    expression -> sexpr TIMES sexpr
Rule 13    expression -> sexpr DIVIDE sexpr
Rule 14    expression -> sexpr EXP sexpr
Rule 15    expression -> expression PLUS sexpr
Rule 16    expression -> expression MINUS sexpr
Rule 17    expression -> expression TIMES sexpr
Rule 18    expression -> expression DIVIDE sexpr
Rule 19    expression -> expression EXP sexpr
Rule 20    expression -> sexpr PLUS expression
Rule 21    expression -> sexpr MINUS expression
Rule 22    expression -> sexpr TIMES expression
Rule 23    expression -> sexpr DIVIDE expression
Rule 24    expression -> sexpr EXP expression
Rule 25    expression -> MINUS expression
Rule 26    expression -> MINUS sexpr
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> LPAREN sexpr RPAREN
Rule 29    expression -> NUMBER
Rule 30    expression -> NAME
Rule 31    sexpr -> SNUMBER
Rule 32    sexpr -> TENS
Rule 33    sexpr -> BIGTENS
Rule 34    sexpr -> BIGTENS SNUMBER
Rule 35    sexpr -> SNUMBER HUNDRED
Rule 36    sexpr -> SNUMBER HUNDRED sexpr
Rule 37    sexpr -> sexpr THOUSAND
Rule 38    sexpr -> sexpr THOUSAND sexpr

Terminals, with rules where they appear

BIGTENS              : 33 34
DIVIDE               : 8 13 18 23
EQUALS               : 1 2
EXP                  : 9 14 19 24
HUNDRED              : 35 36
LPAREN               : 27 28
MINUS                : 6 11 16 21 25 26
NAME                 : 1 2 30
NUMBER               : 29
PLUS                 : 5 10 15 20
RPAREN               : 27 28
SNUMBER              : 31 34 35 36
TENS                 : 32
THOUSAND             : 37 38
TIMES                : 7 12 17 22
error                : 

Nonterminals, with rules where they appear

expression           : 1 3 5 5 6 6 7 7 8 8 9 9 15 16 17 18 19 20 21 22 23 24 25 27
sexpr                : 2 4 10 10 11 11 12 12 13 13 14 14 15 16 17 18 19 20 21 22 23 24 26 28 36 37 38 38
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . NAME EQUALS expression
    (2) statement -> . NAME EQUALS sexpr
    (3) statement -> . expression
    (4) statement -> . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    NAME            shift and go to state 2
    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    statement                      shift and go to state 1
    expression                     shift and go to state 3
    sexpr                          shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (1) statement -> NAME . EQUALS expression
    (2) statement -> NAME . EQUALS sexpr
    (30) expression -> NAME .

    EQUALS          shift and go to state 11
    PLUS            reduce using rule 30 (expression -> NAME .)
    MINUS           reduce using rule 30 (expression -> NAME .)
    TIMES           reduce using rule 30 (expression -> NAME .)
    DIVIDE          reduce using rule 30 (expression -> NAME .)
    EXP             reduce using rule 30 (expression -> NAME .)
    $end            reduce using rule 30 (expression -> NAME .)


state 3

    (3) statement -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXP expression
    (15) expression -> expression . PLUS sexpr
    (16) expression -> expression . MINUS sexpr
    (17) expression -> expression . TIMES sexpr
    (18) expression -> expression . DIVIDE sexpr
    (19) expression -> expression . EXP sexpr

    $end            reduce using rule 3 (statement -> expression .)
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    EXP             shift and go to state 16


state 4

    (4) statement -> sexpr .
    (10) expression -> sexpr . PLUS sexpr
    (11) expression -> sexpr . MINUS sexpr
    (12) expression -> sexpr . TIMES sexpr
    (13) expression -> sexpr . DIVIDE sexpr
    (14) expression -> sexpr . EXP sexpr
    (20) expression -> sexpr . PLUS expression
    (21) expression -> sexpr . MINUS expression
    (22) expression -> sexpr . TIMES expression
    (23) expression -> sexpr . DIVIDE expression
    (24) expression -> sexpr . EXP expression
    (37) sexpr -> sexpr . THOUSAND
    (38) sexpr -> sexpr . THOUSAND sexpr

    $end            reduce using rule 4 (statement -> sexpr .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    EXP             shift and go to state 21
    THOUSAND        shift and go to state 22


state 5

    (25) expression -> MINUS . expression
    (26) expression -> MINUS . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 23
    sexpr                          shift and go to state 24

state 6

    (27) expression -> LPAREN . expression RPAREN
    (28) expression -> LPAREN . sexpr RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 26
    sexpr                          shift and go to state 27

state 7

    (29) expression -> NUMBER .

    PLUS            reduce using rule 29 (expression -> NUMBER .)
    MINUS           reduce using rule 29 (expression -> NUMBER .)
    TIMES           reduce using rule 29 (expression -> NUMBER .)
    DIVIDE          reduce using rule 29 (expression -> NUMBER .)
    EXP             reduce using rule 29 (expression -> NUMBER .)
    $end            reduce using rule 29 (expression -> NUMBER .)
    RPAREN          reduce using rule 29 (expression -> NUMBER .)


state 8

    (31) sexpr -> SNUMBER .
    (35) sexpr -> SNUMBER . HUNDRED
    (36) sexpr -> SNUMBER . HUNDRED sexpr

    PLUS            reduce using rule 31 (sexpr -> SNUMBER .)
    MINUS           reduce using rule 31 (sexpr -> SNUMBER .)
    TIMES           reduce using rule 31 (sexpr -> SNUMBER .)
    DIVIDE          reduce using rule 31 (sexpr -> SNUMBER .)
    EXP             reduce using rule 31 (sexpr -> SNUMBER .)
    THOUSAND        reduce using rule 31 (sexpr -> SNUMBER .)
    $end            reduce using rule 31 (sexpr -> SNUMBER .)
    RPAREN          reduce using rule 31 (sexpr -> SNUMBER .)
    HUNDRED         shift and go to state 28


state 9

    (32) sexpr -> TENS .

    PLUS            reduce using rule 32 (sexpr -> TENS .)
    MINUS           reduce using rule 32 (sexpr -> TENS .)
    TIMES           reduce using rule 32 (sexpr -> TENS .)
    DIVIDE          reduce using rule 32 (sexpr -> TENS .)
    EXP             reduce using rule 32 (sexpr -> TENS .)
    THOUSAND        reduce using rule 32 (sexpr -> TENS .)
    $end            reduce using rule 32 (sexpr -> TENS .)
    RPAREN          reduce using rule 32 (sexpr -> TENS .)


state 10

    (33) sexpr -> BIGTENS .
    (34) sexpr -> BIGTENS . SNUMBER

    PLUS            reduce using rule 33 (sexpr -> BIGTENS .)
    MINUS           reduce using rule 33 (sexpr -> BIGTENS .)
    TIMES           reduce using rule 33 (sexpr -> BIGTENS .)
    DIVIDE          reduce using rule 33 (sexpr -> BIGTENS .)
    EXP             reduce using rule 33 (sexpr -> BIGTENS .)
    THOUSAND        reduce using rule 33 (sexpr -> BIGTENS .)
    $end            reduce using rule 33 (sexpr -> BIGTENS .)
    RPAREN          reduce using rule 33 (sexpr -> BIGTENS .)
    SNUMBER         shift and go to state 29


state 11

    (1) statement -> NAME EQUALS . expression
    (2) statement -> NAME EQUALS . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 30
    sexpr                          shift and go to state 31

state 12

    (5) expression -> expression PLUS . expression
    (15) expression -> expression PLUS . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 32
    sexpr                          shift and go to state 33

state 13

    (6) expression -> expression MINUS . expression
    (16) expression -> expression MINUS . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 34
    sexpr                          shift and go to state 35

state 14

    (7) expression -> expression TIMES . expression
    (17) expression -> expression TIMES . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 36
    sexpr                          shift and go to state 37

state 15

    (8) expression -> expression DIVIDE . expression
    (18) expression -> expression DIVIDE . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 38
    sexpr                          shift and go to state 39

state 16

    (9) expression -> expression EXP . expression
    (19) expression -> expression EXP . sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr

    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25
    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10

    expression                     shift and go to state 40
    sexpr                          shift and go to state 41

state 17

    (10) expression -> sexpr PLUS . sexpr
    (20) expression -> sexpr PLUS . expression
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10
    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25

    sexpr                          shift and go to state 42
    expression                     shift and go to state 43

state 18

    (11) expression -> sexpr MINUS . sexpr
    (21) expression -> sexpr MINUS . expression
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10
    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25

    sexpr                          shift and go to state 44
    expression                     shift and go to state 45

state 19

    (12) expression -> sexpr TIMES . sexpr
    (22) expression -> sexpr TIMES . expression
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10
    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25

    sexpr                          shift and go to state 46
    expression                     shift and go to state 47

state 20

    (13) expression -> sexpr DIVIDE . sexpr
    (23) expression -> sexpr DIVIDE . expression
    (31) sexpr -> . SNUMBER
    (32) sexpr -> . TENS
    (33) sexpr -> . BIGTENS
    (34) sexpr -> . BIGTENS SNUMBER
    (35) sexpr -> . SNUMBER HUNDRED
    (36) sexpr -> . SNUMBER HUNDRED sexpr
    (37) sexpr -> . sexpr THOUSAND
    (38) sexpr -> . sexpr THOUSAND sexpr
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXP expression
    (10) expression -> . sexpr PLUS sexpr
    (11) expression -> . sexpr MINUS sexpr
    (12) expression -> . sexpr TIMES sexpr
    (13) expression -> . sexpr DIVIDE sexpr
    (14) expression -> . sexpr EXP sexpr
    (15) expression -> . expression PLUS sexpr
    (16) expression -> . expression MINUS sexpr
    (17) expression -> . expression TIMES sexpr
    (18) expression -> . expression DIVIDE sexpr
    (19) expression -> . expression EXP sexpr
    (20) expression -> . sexpr PLUS expression
    (21) expression -> . sexpr MINUS expression
    (22) expression -> . sexpr TIMES expression
    (23) expression -> . sexpr DIVIDE expression
    (24) expression -> . sexpr EXP expression
    (25) expression -> . MINUS expression
    (26) expression -> . MINUS sexpr
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN sexpr RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    SNUMBER         shift and go to state 8
    TENS            shift and go to state 9
    BIGTENS         shift and go to state 10
    MINUS           shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 7
    NAME            shift and go to state 25

    sexpr                          shift and go to state 48
    expression                     shift and go to state 49

state 21
